--- a/summerdate.css
+++ b/summerdate.css
@@ -4,10 +4,19 @@
     padding: 0;
     font-family: Avenir,"Poppins", Helvetica, Arial, sans-serif;
 }
-
+.navbar{
+    width: 100%;
+}
 .navbar-brand{
     color: aliceblue;
     font-size: 27px;
+}
+.bg-custom1 {
+    background: rgba(0, 0, 0, 0.4)
+}
+.toggler-bg {
+    width: 60px;
+    background-color:   rgb(225, 230, 225);
 }
 .navbar-brand:hover{
     color: aliceblue;
@@ -15,6 +24,7 @@
 .nav-link{
     color: aliceblue;
     font-size: 16px;
+    margin-inline: 1px;
 }
 .nav-link:hover a{
     color: aliceblue;
@@ -34,10 +44,14 @@ display: none;
 position: absolute;
 width: 230px;
 height: 106px;
-top:33px;
+top: 35px;
 left: -78px;
 background: rgba(0, 0, 0, 0.5);
 border-radius: 3px;
+}
+
+.dropdown-item a:hover{
+    color: #000000;
 }
 
 .picnicsetlink{
@@ -48,14 +62,37 @@ border-radius: 3px;
     background: rgba(234, 234, 234, 0.5);
 }
 
+@media (max-width: 600px){
+    .navbar{
+        width:393px ;
+    }
+    .ourworks-dropdown{
+        display: none;
+        position: absolute;
+        width: 200px;
+        height: 106px;
+        /* border: 1px solid grey; */
+        top: 1px;
+        left: 110px;
+        background: rgba(0, 0, 0, 0.5);
+        border-radius: 3px;
+        }
+    .nav-link{
+            color: aliceblue;
+            font-size: 16px;
+            margin-inline: 1px;
+            margin-left: 10px;
+        }
+}
+
 
 /* HOME SECTION  */
 #homesection {
     margin: 0;
     padding: 0;
     background-image: url(/img/homehero.png);
-    background-repeat: none;
-    width: 100%;
+    background-repeat: no-repeat;
+    width: 100%p;
     height: 800px;
 }
 #homesection .container {
@@ -116,12 +153,40 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 }
+@media (max-width: 600px){
+    #homesection {
+        width: 393px;
+    }
+    #homesection h1{
+        font-size: 25px;
+        margin-left: -30px;
+    }
+    .mobile-p{
+        font-size: 13px;
+        margin-top: -10px;
+        margin-left: -15px;
+    }
+    #homesection .container {
+        display: flex;
+        justify-content: left;
+        position: absolute;
+        width: 300px;
+        height: 250px;
+        top: 40%;
+    }
+    .galerbutton{
+        left: 20px;
+    }
+    .pricing {
+        left: 150px;    
+    }
+}
 
 /* GALLERY SECTION */
 
 #gallery {
     width: 100%;
-    height: 100vh;
+    height: 1300px;
 }
 
 .title {
@@ -129,14 +194,41 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     justify-content: center;
     margin-top: 15px ;
 }
-
-.art11 {
-   margin-top: 10%;
+.bear-img {
+    position: relative;
+    left: -17px;
+}
+.cardboard-main {
+    display: flex;
+    justify-content: space-around;
+}
+.cardboard {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center ;
+    flex-direction: column;
+    padding: 0px;
 }
 .art1 {
-    position: absolute;
-    top: 170px;
-    left: 73px;
     width: 500px;
     text-align: center;
+}
+
+/* PRICING SECTION */
+
+#pricings {
+    padding: 0;
+    margin: 0;
+    height: 1000px;
+    background: linear-gradient(180deg, rgba(227, 223, 205, 0) 16.15%, #E3DFCD 100%);
+
+}
+
+.pricepage-title {
+font-family: 'poppins';
+font-style: normal;
+font-weight: bold;
+font-size: 45px;
+line-height: 54px;
+text-align: center;
 }
