--- a/summerdate.css
+++ b/summerdate.css
@@ -12,11 +12,13 @@
     font-size: 27px;
 }
 .bg-custom1 {
-    background: rgba(0, 0, 0, 0.4)
+}
+.bg-custom12 {
+    background: rgba(0, 0, 0, 1)
 }
 .toggler-bg {
     width: 60px;
-    background-color:   rgb(225, 230, 225);
+    background: rgba(201, 172, 127, 0.7);
 }
 .navbar-brand:hover{
     color: aliceblue;
@@ -47,6 +49,7 @@ height: 106px;
 top: 35px;
 left: -78px;
 background: rgba(0, 0, 0, 0.5);
+border: 1px solid rgba(0, 0, 0, 0.5);
 border-radius: 3px;
 }
 
@@ -61,10 +64,54 @@ border-radius: 3px;
     padding: 0;
     background: rgba(234, 234, 234, 0.5);
 }
+.btn-contact-us{
+    box-sizing: border-box;
+    color: aliceblue;
+    font-weight: 500;
+    width: 140px;
+    height: 40px;
+    background: rgba(201, 172, 127, 1);
+    border: 1px solid #000000;
+    border-radius: 5px;
+    border: 1px solid #000000;
 
+}
+.arrow-down{
+    position: absolute;
+    transform: rotate(90deg);
+    margin-left: 5px;
+    margin-top: -6px;
+    font-size: 25px;
+}
+.contact{
+    margin-left: -15px;
+    font-size: 16px;
+}
+.dropdown-item:hover{
+    background: rgba(234, 234, 234, 0.5) ;
+}
+
+ .dropdown-menu{
+    display: none;
+    text-align: center;
+box-sizing: border-box;
+position: absolute;
+width: 158px;
+height:90px;
+top:42px;
+left:-12px;
+background: rgba(0, 0, 0, 0.5);
+border: 1px solid rgba(0, 0, 0, 0.5);
+border-radius: 2px;
+}
+ 
 @media (max-width: 600px){
     .navbar{
         width:393px ;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .navbar-brand{
+        font-size: 24px;
     }
     .ourworks-dropdown{
         display: none;
@@ -83,6 +130,16 @@ border-radius: 3px;
             margin-inline: 1px;
             margin-left: 10px;
         }
+        .arrow-down{
+            transform: rotate(0deg);
+        }
+        .dropdown-menu{
+            background: rgba(0, 0, 0, 1);
+            width: 400px;
+            margin: -19px;
+
+        }
+    
 }
 
 
@@ -156,15 +213,27 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 @media (max-width: 600px){
     #homesection {
         width: 393px;
+        height: 600px;
+        background-position: -350px 0px;
+        background-size: 890px ;
     }
     #homesection h1{
         font-size: 25px;
         margin-left: -30px;
     }
+    .picnic-coi{
+        font-size: 15px;
+        font-weight: 700;
+
+    }
     .mobile-p{
         font-size: 13px;
         margin-top: -10px;
         margin-left: -15px;
+        line-height: 17px;
+        text-align: justify;
+        width: 290px;
+        left: 23px;
     }
     #homesection .container {
         display: flex;
@@ -231,4 +300,57 @@ font-weight: bold;
 font-size: 45px;
 line-height: 54px;
 text-align: center;
+}
+
+/* FOOTER */
+.p-about{
+    width: 500px;
+    font-size: 12px;
+    text-align: center;
+    margin: auto;
+    padding-top: 5px;
+}
+.ctn-footer{
+    text-align: center;
+    height: 124px;
+    width: 100%;
+    background-color: rgba(201, 172, 127, 0.7);
+}
+h5{
+    font-size: 12px;
+    padding: 7px;
+}
+.socmed{
+    padding-top: 10px;
+    padding-bottom: 8px;
+}
+.iconset {
+    width: 26px;
+    /* border: 1px solid rgb(234, 234, 234); */
+    border-radius: 18px;
+
+}
+@media (max-width: 600px){
+    .p-about{
+        width: 300px;
+    }
+.ctn-footer{
+    text-align: center;
+    height: 150px;
+    width: 393px;
+    background-color: rgba(201, 172, 127, 0.7);
+}
+h5{
+    font-size: 12px;
+    padding: 7px;
+}
+.socmed{
+    padding-top: 18px;
+}
+.iconset {
+    width: 26px;
+    /* border: 1px solid rgb(234, 234, 234); */
+    border-radius: 18px;
+
+}
 }
